3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/player.c: Set map for arrow as returned by get_map_flags -
   otherwise when firing at edge of tiled maps, arrows could end up
   in wrong place.
MSW 2005-08-09

include/config.h: Make DEBUG default - appears last commit changed this
   as unrelated to actual changes in place.
include/sproto.h: Rebuild
server/player.c: fire_bow() - add checks for wall/out of map.  fire_bow()
   wasn't using right coordinates on check, which caused problems in
   threewide mode at edge of maps.
MSW 2005-08-07

plugin_logger/plugin_logger.c: make it compile under Win32.
Ryo 2005-07-30

server/player.c: fix crash when news or rules > HUGE_BUF.
Ryo 2005-07-29

server/{monster.c, pets.c}: Fix bugs in arena petmode and clean up most of
   it's logic into it's own function.
lib/help/petmode: Document the arena petmode in the "help petmode" output.
Alex Schultz 2005-07-28

server/skills.c: use correct sp/grace for inscription.
Ryo 2005-07-27

The following changes prevent spells in player's inventories from being
damaged by casting spells, using skills, or praying.
server/attack.c: Limit cancellation and acid attacks to visible objects only.
server/gods.c: Limit god granted remove curse/damnation to visible objects
   only.
server/skills.c: Limit the skills sense curse and sense magic to visible
   objects only.
server/spell_effect.c: Limit the spells detect curse and detect magic to
   visible objects only.
Andreas Kirschbaum 2005-07-26

server/skill_util.c: don't try to send a message if monster killed/removed.
Ryo 2005-07-23

socket/init.c: settings values to 0 before using'em works better, usually ^_-
Ryo 2005-07-22
